# py_elog

./: .appveyor.yml  .gitignore  .travis.yml  MANIFEST.in  README.md  Readme.md  elog.py  message.py  pyElog.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: conda_publish.yaml  pypi_publish.yaml  python-app.yml  python-publish.yml  python_test.yaml
conda-recipe/: build.sh  meta.yaml
elog/: __init__.py  logbook.py  logbook_exceptions.py
tests/: test_attachments.py  test_logbook.py
